--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -339,7 +339,7 @@ GetDeathMontage_6=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_Vari
 GetDeathMontage=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,
 TakeDamage_9=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,
 PrimitiveComponent=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
-BP_AI_Controller_Base_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
+BP_AI_Controller_Base_C=
 MetaSoundSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,CapsuleComponent.Collision.Collision,
 Svr_BullerTrace_39=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
 Svr_BullerTrace=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.ActionMappings.ADS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.FireWeapon,InputSettings.Bindings.ActionMappings.PauseGame,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.SwitchWeapon,CapsuleComponent.Collision.Collision,
@@ -1944,6 +1944,7 @@ EditorNotifyObject.AnimLink=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Widgets/WB_IngameHUD.WB_IngameHUD
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2007,26 +2008,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/BP_Hero_Base
-MRUItem1=/Game/AI/BP_AI_Minion_Base
-MRUItem2=/Game/Characters/ABP_Hero_Quinn
-MRUItem3=/Game/Framework/Interface/BPI_Damage_Player
-MRUItem4=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_A_Montage
-MRUItem5=/Game/AI/ABP_AI_Minion_Melee
-MRUItem6=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_E_SetA_Montage
-MRUItem7=/Game/Maps/Menu/MainMenu_Map
-MRUItem8=/Game/Maps/Map_01
-MRUItem9=/Game/Framework/BP_SHooter_Gamemode
-MRUItem10=/Game/Gameplay/BP_SpawnPoint_AI
-MRUItem11=/Game/Characters/BP_XP_Component
-MRUItem12=/Game/AI/BP_AI_Controller_Base
-MRUItem13=/Game/Weapons/BP_WeaponImpact
-MRUItem14=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Melee_Core_ShadowCyl
-MRUItem15=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Physics
-MRUItem16=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Core_ShadowCyl
-MRUItem17=/Game/Framework/Interface/BPI_Damage_Interface
-MRUItem18=/Game/MigratedSFX/NS_DamageNumbers
-MRUItem19=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Materials/Shared/M_Minion_Dusk_Parent
+MRUItem0=/Game/Widgets/WB_IngameHUD
+MRUItem1=/Game/AI/BP_AI_Controller_Base
+MRUItem2=/Game/Characters/BP_Hero_Base
+MRUItem3=/Game/AI/BP_AI_Minion_Base
+MRUItem4=/Game/Characters/ABP_Hero_Quinn
+MRUItem5=/Game/Framework/Interface/BPI_Damage_Player
+MRUItem6=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_A_Montage
+MRUItem7=/Game/AI/ABP_AI_Minion_Melee
+MRUItem8=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Attack_E_SetA_Montage
+MRUItem9=/Game/Maps/Menu/MainMenu_Map
+MRUItem10=/Game/Maps/Map_01
+MRUItem11=/Game/Framework/BP_SHooter_Gamemode
+MRUItem12=/Game/Gameplay/BP_SpawnPoint_AI
+MRUItem13=/Game/Characters/BP_XP_Component
+MRUItem14=/Game/Weapons/BP_WeaponImpact
+MRUItem15=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Melee_Core_ShadowCyl
+MRUItem16=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Physics
+MRUItem17=/Game/ParagonMinions/Characters/Minions/Dusk_Minions/Meshes/Minion_Lane_Siege_Core_ShadowCyl
+MRUItem18=/Game/Framework/Interface/BPI_Damage_Interface
+MRUItem19=/Game/MigratedSFX/NS_DamageNumbers
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2041,8 +2042,8 @@ EdGraphNode="\"Object.PinOptions.PinNames\" "
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2072,7 +2073,7 @@ ParticleModule="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \
 SG_PlayerProfile_C=
 SaveGame=
 WB_CharacterMenu_C=
-ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 S_CharCustomisation="\"Struct.ModelsAndSkins_9_D14649254DC0C7026A8158B028EFF4AB\" "
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3386,6 +3387,7 @@ Synth=False
 Uncategorized=False
 User Created=True
 Advanced=False
+Audio=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
